data/issues_nolabel/nolabel_test_3393.txt
build_pip_package failed to build without GPU option

Environment info
Operating System: Ubuntu 16.04 LTS
GCC Version: 5.4.0
python 3.5.2
Installed version of CUDA and cuDNN:  None
If installed from sources, provide the commit hash:
fc91629
Steps to reproduce

build bazel from sources
git clone --recurse-submodules https://github.com/tensorflow/tensorflow
./configure
bazel build -c opt //tensorflow/tools/pip_package:build_pip_package --verbose_failures

What have you tried?

rebuild bazel and rebuild tensorflow

Logs or other output that would be helpful

INFO: Waiting for response from Bazel server (pid 17346)...
WARNING: /home/jxypoi/Documents/tensorflow/util/python/BUILD:11:16: in includes attribute of cc_library rule //util/python:python_headers: 'python_include' resolves to 'util/python/python_include' not in 'third_party'. This will be an error in the future.
WARNING: /home/jxypoi/.cache/bazel/bazel_jxypoi/d296672d8345626b0b5383fe0f5b61e2/external/boringssl_git/WORKSPACE:1: Workspace name in /home/jxypoi/.cache/bazel/bazel_jxypoi/d296672d8345626b0b5383fe0f5b61e2/external/boringssl_git/WORKSPACE (@boringssl) does not match the name given in the repository's definition (@boringssl_git); this will cause a build error in future versions.
INFO: Found 1 target...
ERROR: /home/jxypoi/Documents/tensorflow/tensorflow/core/kernels/BUILD:1080:1: C++ compilation of rule '//tensorflow/core/kernels:sparse_matmul_op' failed: gcc failed: error executing command
(cd /home/jxypoi/.cache/bazel/bazel_jxypoi/d296672d8345626b0b5383fe0f5b61e2/execroot/tensorflow && 
exec env - 
PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin 
/usr/bin/gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -Wall -Wl,-z,-relro,-z,now -B/usr/bin -B/usr/bin -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer -g0 -O2 -DNDEBUG -ffunction-sections -fdata-sections '-std=c++0x' -MD -MF bazel-out/local-py3-opt/bin/tensorflow/core/kernels/objs/sparse_matmul_op/tensorflow/core/kernels/sparse_matmul_op.pic.d '-frandom-seed=bazel-out/local-py3-opt/bin/tensorflow/core/kernels/objs/sparse_matmul_op/tensorflow/core/kernels/sparse_matmul_op.pic.o' -fPIC -DHAVE_CONFIG_H -iquote . -iquote bazel-out/local-py3-opt/genfiles -iquote external/protobuf -iquote bazel-out/local-py3-opt/genfiles/external/protobuf -iquote external/bazel_tools -iquote bazel-out/local-py3-opt/genfiles/external/bazel_tools -iquote external/farmhash_archive -iquote bazel-out/local-py3-opt/genfiles/external/farmhash_archive -iquote external/jpeg_archive -iquote bazel-out/local-py3-opt/genfiles/external/jpeg_archive -iquote external/png_archive -iquote bazel-out/local-py3-opt/genfiles/external/png_archive -iquote external/gif_archive -iquote bazel-out/local-py3-opt/genfiles/external/gif_archive -iquote external/highwayhash -iquote bazel-out/local-py3-opt/genfiles/external/highwayhash -iquote external/re2 -iquote bazel-out/local-py3-opt/genfiles/external/re2 -iquote external/eigen_archive -iquote bazel-out/local-py3-opt/genfiles/external/eigen_archive -iquote external/zlib_archive -iquote bazel-out/local-py3-opt/genfiles/external/zlib_archive -iquote external/boringssl_git -iquote bazel-out/local-py3-opt/genfiles/external/boringssl_git -iquote external/jsoncpp_git -iquote bazel-out/local-py3-opt/genfiles/external/jsoncpp_git -isystem external/protobuf/src -isystem bazel-out/local-py3-opt/genfiles/external/protobuf/src -isystem external/bazel_tools/tools/cpp/gcc3 -isystem external/farmhash_archive/farmhash-34c13ddfab0e35422f4c3979f360635a8c050260 -isystem bazel-out/local-py3-opt/genfiles/external/farmhash_archive/farmhash-34c13ddfab0e35422f4c3979f360635a8c050260 -isystem external/jpeg_archive/jpeg-9a -isystem bazel-out/local-py3-opt/genfiles/external/jpeg_archive/jpeg-9a -isystem external/png_archive/libpng-1.2.53 -isystem bazel-out/local-py3-opt/genfiles/external/png_archive/libpng-1.2.53 -isystem external/gif_archive/giflib-5.1.4/lib -isystem bazel-out/local-py3-opt/genfiles/external/gif_archive/giflib-5.1.4/lib -isystem external/highwayhash -isystem bazel-out/local-py3-opt/genfiles/external/highwayhash -isystem external/re2 -isystem bazel-out/local-py3-opt/genfiles/external/re2 -isystem third_party/eigen3 -isystem bazel-out/local-py3-opt/genfiles/third_party/eigen3 -isystem external/eigen_archive/eigen-eigen-b4fa9622b809 -isystem bazel-out/local-py3-opt/genfiles/external/eigen_archive/eigen-eigen-b4fa9622b809 -isystem external/zlib_archive/zlib-1.2.8 -isystem bazel-out/local-py3-opt/genfiles/external/zlib_archive/zlib-1.2.8 -isystem external/boringssl_git/src/include -isystem bazel-out/local-py3-opt/genfiles/external/boringssl_git/src/include -isystem external/jsoncpp_git/include -isystem bazel-out/local-py3-opt/genfiles/external/jsoncpp_git/include -fno-exceptions -DEIGEN_AVOID_STL_ARRAY -pthread -fno-canonical-system-headers -Wno-builtin-macro-redefined '-D__DATE="redacted"' '-D__TIMESTAMP="redacted"' '-D__TIME_="redacted"' -c tensorflow/core/kernels/sparse_matmul_op.cc -o bazel-out/local-py3-opt/bin/tensorflow/core/kernels/_objs/sparse_matmul_op/tensorflow/core/kernels/sparse_matmul_op.pic.o): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
In file included from tensorflow/core/kernels/sparse_matmul_op.cc:20:0:
./tensorflow/core/kernels/sparse_matmul_op.h:46:26: error: 'Packet4f' does not name a type
EIGEN_DEVICE_FUNC inline Packet4f pexpand_bf16_l(const Packet4f& from) {
^
./tensorflow/core/kernels/sparse_matmul_op.h:59:26: error: 'Packet4f' does not name a type
EIGEN_DEVICE_FUNC inline Packet4f pexpand_bf16_u(const Packet4f& from) {
^
./tensorflow/core/kernels/sparse_matmul_op.h:117:21: error: 'Packet4f' does not name a type
EIGEN_STRONG_INLINE Packet4f pload4bf16(const float* from) {
^
./tensorflow/core/kernels/sparse_matmul_op.h:128:21: error: 'Packet4f' does not name a type
EIGEN_STRONG_INLINE Packet4f pload2bf16(const float* from) {
^
./tensorflow/core/kernels/sparse_matmul_op.h: In instantiation of 'Packet Eigen::internal::pexpand_bf16_l(const Packet&) [with Packet = float]':
tensorflow/core/kernels/sparse_matmul_op.cc:375:3:   required from here
./tensorflow/core/kernels/sparse_matmul_op.h:31:44: warning: dereferencing type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing]
return reinterpret_cast<const float&>(tmp);
^
./tensorflow/core/kernels/sparse_matmul_op.h: In instantiation of 'Packet Eigen::internal::pexpand_bf16_u(const Packet&) [with Packet = float]':
tensorflow/core/kernels/sparse_matmul_op.cc:376:3:   required from here
./tensorflow/core/kernels/sparse_matmul_op.h:40:44: warning: dereferencing type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing]
return reinterpret_cast<const float&>(tmp);
^
Target //tensorflow/tools/pip_package:build_pip_package failed to build

any problems with the src?